# python-clang-tooling

./: .gitignore  LICENSE  README.md
examples/: example.py  poly_matcher.py  test.py  tests.py
src/: CMakeLists.txt  bound-nodes.cc  bound-nodes.h  main.cc  node-matcher.cc  node-matcher.h  poly-matcher.cc  poly-matcher.h  simple-expose.cc  simple-expose.h  tooling.cc  tooling.h  wrapper-expose.cc  wrapper-expose.h
src/actions/: frontendaction.cc  frontendaction.h
src/consumer/: consumer.cc  consumer.h
src/tooling/: tooling.cc  tooling.h
src/utils/: matchercallback.h  utils.h
